--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -31,21 +31,34 @@ install:
     - openssl version
     # php is not cached because this script change versions
     - ps: |
-          # Retrieve version from choco using php environment variable
-          $php_install_version = (( `
-              choco search php --exact --all-versions -r `
-                  | Select-String -Pattern $env:php `
-                  | Sort-Object { [version]($_ -Split '\|' | Select-Object -Last 1) } -Descending `
-                  | Select-Object -First 1 `
-              ) -Replace '[php|]', '')
-          Write-Host "Required PHP Version: $php_install_version"
+          # Get current version of php (if any)
+          $current_version = ""
+          if (Test-Path c:\tools\php\php.exe) {
+              [string]$current_version = php -r "printf('%s.%s', PHP_MAJOR_VERSION, PHP_MINOR_VERSION);"
+          }
+          # Test if require installation
+          if (! ($current_version -eq $php)) {
+              # uninstall if previous version exists
+              if ($current_version -eq "") {
+                  choco uninstall php --yes --force --ignore-package-exit-codes --ignore-autouninstaller-failure
+              }
 
-          # install php on C:\tools\php
-          appveyor-retry choco install --ignore-checksums --params='""/InstallDir:C:\tools\php""' `
-              php --version $php_install_version --yes --force
+              # Retrieve version from choco using php environment variable
+              $php_install_version = (( `
+                  choco search php --exact --all-versions -r `
+                      | Select-String -Pattern $env:php `
+                      | Sort-Object { [version]($_ -Split '\|' | Select-Object -Last 1) } -Descending `
+                      | Select-Object -First 1 `
+                  ) -Replace '[php|]', '')
+              Write-Host "Required PHP Version: $php_install_version"
+
+              # install php on C:\tools\php
+              appveyor-retry choco install --ignore-checksums --params='""/InstallDir:C:\tools\php""' `
+                  php --version $php_install_version --yes
+          }
 
           # setup c:\tools\php\php.ini
-          if (! (Test-Path c:\tools\php\php.ini)) {
+          if (Test-Path c:\tools\php\php.ini-production) {
               Copy-Item -Path c:\tools\php\php.ini-production -Destination c:\tools\php\php.ini
               Add-Content c:\tools\php\php.ini "`
                   `n; PHP Custom config `
