create documentation about multiple complemento and cleaning

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,6 +35,7 @@ nav:
     - "Problemas":
         - problemas/contradicciones-pagos.md
         - problemas/descarga-certificados.md
+        - problemas/multiples-complementos.md
     - "Acerca de":
         - "To Do List": "TODO.md"
         - "Changelog": "CHANGELOG.md"
