--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,15 @@ language: php
 
 # php compatibility
 php:
-    - "7.0"
-    - "7.1"
-    - "7.2"
+#    - "7.0"
+#    - "7.1"
+#    - "7.2"
     - "7.3"
-    - "7.4snapshot"
+#    - "7.4snapshot"
 
-matrix:
-    allow_failures:
-        - php: "7.4snapshot"
+#matrix:
+#    allow_failures:
+#        - php: "7.4snapshot"
 
 branches:
     except:
@@ -42,7 +42,7 @@ before_script:
     - travis_retry pip install --user mkdocs
     - | # codeclimate
         if [[ "$TRAVIS_PHP_VERSION" == "$FULL_BUILD_PHP_VERSION" && "$TRAVIS_PULL_REQUEST" == "false" ]]; then
-            wget -o ./cc-test-reporter https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64
+            wget -O ./cc-test-reporter https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64
             chmod +x ./cc-test-reporter
             ./cc-test-reporter before-build
             echo "CodeClimate before build status: $?"
