--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,15 @@ language: php
 
 # php compatibility
 php:
-#    - "7.0"
-#    - "7.1"
-#    - "7.2"
+    - "7.0"
+    - "7.1"
+    - "7.2"
     - "7.3"
-#    - "7.4snapshot"
+    - "7.4snapshot"
 
-#matrix:
-#    allow_failures:
-#        - php: "7.4snapshot"
+matrix:
+    allow_failures:
+        - php: "7.4snapshot"
 
 branches:
     except:
