--- a/.gitattributes
+++ b/.gitattributes
@@ -14,14 +14,19 @@
 
 # Do not put this files on a distribution package
 /tests/              export-ignore
+/.appveyor.xml       export-ignore
+/.codeclimate.yml    export-ignore
+/.editorconfig       export-ignore
 /.gitattributes      export-ignore
 /.gitignore          export-ignore
+/.markdownlint.json  export-ignore
 /.php_cs.dist        export-ignore
 /.phplint.yml        export-ignore
 /.scrutinizer.yml    export-ignore
 /.travis.yml         export-ignore
-/phpcs.xml.dist      export-ignore
-/phpunit.xml.dist    export-ignore
 /mkdocs.yml          export-ignore
-/.markdownlint.json  export-ignore
+/package.json        export-ignore
+/phpcs.xml.dist      export-ignore
+/phpstan.neon.dist   export-ignore
+/phpunit.xml.dist    export-ignore
 
