dev:test calls also dev:check-style

--- a/composer.json
+++ b/composer.json
@@ -77,6 +77,7 @@
         ],
         "dev:test": [
             "vendor/bin/phplint",
+            "@dev:check-style",
             "vendor/bin/phpunit --testdox --verbose --stop-on-failure",
             "vendor/bin/phpstan.phar analyse --no-progress --level max src/ tests/"
         ],
@@ -89,7 +90,7 @@
         "dev:check-style": "DEV: search for code style errors using php-cs-fixer and phpcs",
         "dev:fix-style": "DEV: fix code style errors using php-cs-fixer and phpcbf",
         "dev:docs": "DEV: search for code style errors unsing markdownlint and build docs using mkdocs",
-        "dev:test": "DEV: run phplint, phpunit and phpstan",
+        "dev:test": "DEV: run phplint, dev:check-style, phpunit and phpstan",
         "dev:coverage": "DEV: run phpunit with xdebug and storage coverage in build/coverage/html/"
     }
 }
