--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: php
 
+dist: bionic
+
 # php compatibility
 php:
     - "7.0"
@@ -18,10 +20,6 @@ branches:
 
 before_install:
     - nvm install 8
-
-# This triggers builds to run on the new TravisCI infrastructure.
-# See: http://docs.travis-ci.com/user/workers/container-based-infrastructure/
-# sudo:false # remove this block
 
 addons:
     apt:
