--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -4,7 +4,8 @@ filter:
         - 'vendor/'
 
 tools:
-    external_code_coverage: true
+    external_code_coverage:
+        timeout: 600 # default is 300 seconds, travis build can take more than that
 
 build:
     nodes:
