Add installation instructions

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,8 @@ theme:
 
 nav:
     - "CfdiUtils": "index.md"
+    - "Instalación":
+        - instalar/instalacion.md
     - "Lectura":
         - leer/leer-cfdi.md
         - leer/quickreader.md
