--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -18,12 +18,15 @@ environment:
         - php: 7.1
         - php: 7.2
         - php: 7.3
+        - php: 7.4
 
 init:
     - SET PATH=c:\tools\php;C:\tools\composer;C:\OpenSSL-v111-Win64\bin;%PATH%
     - SET COMPOSER_NO_INTERACTION=1
     - SET ANSICON="121x90 (121x90)"
     - SET saxonb-path=C:\ProgramData\chocolatey\bin\SaxonHE\bin\Transform.exe
+    - SET PHP_CS_FIXER_FUTURE_MODE=1
+    - SET PHP_CS_FIXER_IGNORE_ENV=1
 
 ## Check for openssl, install php using version environment, install
 install:
