--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,11 @@ php:
     - "7.1"
     - "7.2"
     - "7.3"
-    - "7.4snapshot"
+    - "7.4"
 
 matrix:
     allow_failures:
-        - php: "7.4snapshot"
+        - php: "7.4"
 
 branches:
     except:
