update extension names (php_<ext> is not working on PHP 7.4)

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -82,12 +82,12 @@ install:
                   date.timezone=UTC `
                   extension_dir=ext `
                   memory_limit=1G `
-                  extension=php_openssl `
-                  extension=php_mbstring `
-                  extension=php_fileinfo `
-                  extension=php_curl `
-                  extension=php_xsl `
-                  extension=php_soap `
+                  extension=openssl `
+                  extension=mbstring `
+                  extension=fileinfo `
+                  extension=curl `
+                  extension=xsl `
+                  extension=soap `
                   "
           }
 
