--- a/.travis.yml
+++ b/.travis.yml
@@ -51,7 +51,7 @@ script:
         fi
     - | # only check phpstan on FULL_BUILD_PHP_VERSION
         if [[ $TRAVIS_PHP_VERSION == $FULL_BUILD_PHP_VERSION ]]; then
-            vendor/bin/phpstan.phar --no-progress analyse --level max src/ tests/
+            vendor/bin/phpstan --no-progress analyse --level max src/ tests/
         fi
     - node node_modules/markdownlint-cli/markdownlint.js *.md docs/
     - ~/.local/bin/mkdocs build --strict --site-dir build/docs
