--- a/.travis.yml
+++ b/.travis.yml
@@ -3,16 +3,7 @@ language: php
 dist: xenial
 
 # php compatibility
-php:
-    - "7.0"
-    - "7.1"
-    - "7.2"
-    - "7.3"
-    - "7.4"
-
-matrix:
-    allow_failures:
-        - php: "7.4"
+php: ["7.0", "7.1", "7.2", "7.3", "7.4"]
 
 branches:
     except:
@@ -28,10 +19,8 @@ addons:
 
 env:
     global:
-        - FULL_BUILD_PHP_VERSION="7.3"
+        - FULL_BUILD_PHP_VERSION="7.4"
         - COVERAGE_FILE=build/coverage-clover.xml
-        - PHP_CS_FIXER_FUTURE_MODE=1
-        - PHP_CS_FIXER_IGNORE_ENV=1
 
 before_script:
     - phpenv config-rm xdebug.ini || true
@@ -47,7 +36,7 @@ script:
         if [[ $TRAVIS_PHP_VERSION == $FULL_BUILD_PHP_VERSION ]]; then
             php -dzend_extension=xdebug.so vendor/bin/phpunit --testdox --verbose --coverage-clover="$COVERAGE_FILE"
         else
-            vendor/bin/phpunit --verbose
+            vendor/bin/phpunit --testdox --verbose
         fi
     - | # only check phpstan on FULL_BUILD_PHP_VERSION
         if [[ $TRAVIS_PHP_VERSION == $FULL_BUILD_PHP_VERSION ]]; then
@@ -65,4 +54,5 @@ after_script:
         fi
 
 notifications:
-    email: false
+    email:
+        if: branch = master
