Remove dev dependences on scrutinizer not required for test coverage

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -11,6 +11,7 @@ build:
     dependencies:
         override:
             - composer self-update --no-interaction --no-progress
+            - composer remove squizlabs/php_codesniffer friendsofphp/php-cs-fixer phpstan/phpstan --dev --no-interaction --no-progress --no-update
             - composer install --no-interaction
     nodes:
         analysis:
