--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,6 @@
     "require-dev": {
         "genkgo/xsl": "^0.6",
         "phpunit/phpunit": "^6.2|^7.3",
-        "overtrue/phplint": "^1.0",
         "squizlabs/php_codesniffer": "^3.0",
         "friendsofphp/php-cs-fixer": "^2.4",
         "phpstan/phpstan": "^0.9|^0.10|^0.11"
@@ -78,7 +77,6 @@
             "mkdocs build --strict --site-dir build/docs"
         ],
         "dev:test": [
-            "vendor/bin/phplint",
             "@dev:check-style",
             "vendor/bin/phpunit --testdox --verbose --stop-on-failure",
             "vendor/bin/phpstan analyse --no-progress --level max src/ tests/"
@@ -92,7 +90,7 @@
         "dev:check-style": "DEV: search for code style errors using php-cs-fixer and phpcs",
         "dev:fix-style": "DEV: fix code style errors using php-cs-fixer and phpcbf",
         "dev:docs": "DEV: search for code style errors unsing markdownlint and build docs using mkdocs",
-        "dev:test": "DEV: run phplint, dev:check-style, phpunit and phpstan",
+        "dev:test": "DEV: run dev:check-style, phpunit and phpstan",
         "dev:coverage": "DEV: run phpunit with xdebug and storage coverage in build/coverage/html/"
     }
 }
