Add tests/resource-sat-xml-download script to populate build/resources

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ before_script:
     - travis_retry composer install --no-interaction --prefer-dist
     - travis_retry npm install
     - travis_retry pip install --user mkdocs
+    - travis_retry bash tests/resource-sat-xml-download build/
 
 script:
     - vendor/bin/phpcs -sp src/ tests/
